# svd-image-compression-platform

./: .gitignore  README.md  app.py  demo_all_features.py  main.py  pyproject.toml  requirements.txt
data/: records.json
src/compression_platform/: __init__.py  cli.py  compression.py  platform.py  records.py  users.py  web.py
static/: styles.css
templates/: admin.html  analyze.html  base.html  dashboard.html  login.html  math_detail.html  record_detail.html  records.html
tests/: test_compression.py  test_platform.py  test_records.py  test_web.py
