[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "svd-image-compression-platform"
version = "0.4.0"
description = "A Flask image compression platform based on SVD and low-rank approximation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "Pillow>=10.0.0",
  "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
